# BayesMCA

./: .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
notebooks/: contador.ipynb  hackett.ipynb  run_hackett_inference.py  wu2004.ipynb
src/bayesmca/: __init__.py  data_model_integration.py  linlog_model.py  pytensor_utils.py  test_antimony_utils.py  test_linlog_model.py  test_pytensor_utils.py  util.py
src/bayesmca/test_models/: __init__.py
tests/: test_data_model_integration.py
